Bump java versions